--- a/nodejsapp1/home/index.html
+++ b/nodejsapp1/home/index.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="slds-media__body">
                                 <h2 class="slds-card__header-title">
-                                    <a href="../public/" class="slds-card__header-link slds-truncate"
+                                    <a href="../public/index.html" class="slds-card__header-link slds-truncate"
                                        title="Accounts">
                                         <span>Custom Activity</span>
                                     </a>
